[package]
name = "xmc4100"
description = "XMC4100 Cortex-M peripheral access library"
license = "MIT"
version = "0.5.0"
readme = "README.md"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
repository = "https://github.com/xmc-rs/xmc4100"
documentation = "https://docs.rs/xmc4100"
keywords = ["cortex-m", "xmc4x", "no_std", "svd2rust", "embedded"]
categories = ["embedded", "no-std"]
edition="2018"

[dependencies]
cortex-m = "0.7.5"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ['rt']
