[package]
name = "xmc4100"
description = "XMC4100 Cortex-M peripheral access library"
license = "MIT"
version = "0.9.0"
readme = "README.md"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
repository = "https://github.com/xmc-rs/xmc4100"
documentation = "https://docs.rs/xmc4100"
keywords = ["cortex-m", "xmc4x", "no_std", "svd2rust", "embedded"]
categories = ["embedded", "no-std"]
edition="2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true}
critical-section = { version = "1.1.2", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ['default']
